[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Utilities to parse .ssh/config files, including helpers to implement ProxyCommand in Russh."
documentation = "https://docs.rs/russh-config"
edition = "2018"
include = ["Cargo.toml", "src/lib.rs", "src/proxy.rs"]
license-file = "LICENSE"
name = "russh-config"
repository = "https://github.com/warp-tech/russh"
version = "0.7.0"

[dependencies]
dirs-next = "2.0"
futures = { version = "0.3" }
log = { version = "0.4" }
thiserror = { version = "1.0" }
tokio = { version = "1.0", features = ["io-util", "net", "macros", "process"] }
whoami = { version = "1.2" }
